kubernetes/exampleapp-manifests/account-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: account-service
  labels:
    deployment: account-service
spec:
  selector:
    app: account-service-app
  ports:
    - name: account-service-port
      protocol: TCP
      port: 8811
      targetPort: 8811

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  labels:
    deployment: account-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account-service-app
  template:
    metadata:
      labels:
        app: account-service-app
    spec:
      containers:
        - name: account-service-container
          image: myregistry.azurecr.io/app/account-service:latest
          ports:
            - containerPort: 8811
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
          imagePullPolicy: Always
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/account-service
        name: logs-folder
