kubernetes/exampleapp-manifests/auth-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: auth-service
  labels:
    deployment: auth-service
spec:
  selector:
    app: auth-service-app
  ports:
    - name: auth-service-port
      protocol: TCP
      port: 8812
      targetPort: 8812

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  labels:
    deployment: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-app
  template:
    metadata:
      labels:
        app: auth-service-app
    spec:
      containers:
        - name: auth-service-container
          image: myregistry.azurecr.io/app/auth-server:latest
          ports:
            - containerPort: 8812
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/auth-service
        name: logs-folder
