kubernetes/exampleapp-manifests/core-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: doc-service
  labels:
    deployment: doc-service
spec:
  selector:
    app: doc-service-app
  ports:
    - name: doc-service-port
      protocol: TCP
      port: 8814
      targetPort: 8814

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-service
  labels:
    deployment: doc-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-service-app
  template:
    metadata:
      labels:
        app: doc-service-app
    spec:
      containers:
        - name: doc-service-container
          image: myregistry.azurecr.io/app/doc-service:latest
          ports:
            - containerPort: 8814
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/doc-service
        name: logs-folder
