kubernetes/exampleapp-manifests/eureka-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-0
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: eureka-0
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
    nodePort: 31761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-1
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    statefulset.kubernetes.io/pod-name: eureka-1
  ports:
  - protocol: TCP
    port: 8761
    targetPort: 8761
    nodePort: 31762
