kubernetes/exampleapp-manifests/logs-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: logs-service
  labels:
    deployment: logs-service
spec:
  selector:
    app: logs-service-app
  ports:
    - name: logs-service-port
      protocol: TCP
      port: 8813
      targetPort: 8813

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logs-service
  labels:
    deployment: logs-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logs-service-app
  template:
    metadata:
      labels:
        app: logs-service-app
    spec:
      containers:
        - name: logs-service-container
          image: myregistry.azurecr.io/app/logs-service:latest
          ports:
            - containerPort: 8813
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/logs-service
        name: logs-folder
