kubernetes/exampleapp-manifests/report-service-deployment.yml
kind: Service
apiVersion: v1
metadata:
  name: report-service
  labels:
    deployment: report-service
spec:
  selector:
    app: report-service-app
  ports:
    - name: report-service-port
      protocol: TCP
      port: 8815
      targetPort: 8815

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-service
  labels:
    deployment: report-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-service-app
  template:
    metadata:
      labels:
        app: report-service-app
    spec:
      containers:
        - name: report-service-container
          image: myregistry.azurecr.io/app/report-service:latest
          ports:
            - containerPort: 8815
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/report-service
        name: logs-folder
