kubernetes/exampleapp-manifests/gateway-service-deployment.yml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: ing-gateway-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  tls:
    - hosts:
        - yourdomain.com
      secretName: scrt-ingress-tls
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: gateway-service
              servicePort: 8810

---
kind: Service
apiVersion: v1
metadata:
  name: gateway-service
  labels:
    deployment: gateway
spec:
  selector:
    app: gateway-app
  ports:
    - protocol: TCP
      port: 8810
      targetPort: 8810

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    deployment: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-container
          image: myregistry.azurecr.io/app/gateway-service:latest
          ports:
            - containerPort: 8810
          imagePullPolicy: Always
          volumeMounts:
          - mountPath: /tmp/logs
            name: logs-folder
      volumes:
      - azureFile:
          readOnly: false
          secretName: scrt-applstorage
          shareName: app-logs/gateway-service
        name: logs-folder
